--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,7 +20,10 @@ spring.datasource.druid.validation-query=SELECT 1
 
 # mybatis≈‰÷√
 mybatis.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
-
+#mybatis.config-location=classpath:mybatis-config.xml
 
 # log≈‰÷√
 logging.level.root=info
+
+# ≈‰÷√port
+server.port=80
