--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,8 @@
 # ≈‰÷√druid ˝æ›‘¥
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
-spring.datasource.url=jdbc:mysql:///wy?characterEncoding=utf8&useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
+spring.datasource.url=jdbc:mysql://139.9.73.191:3306/wy?characterEncoding=utf8&useSSL=false&serverTimezone=UTC&allowPublicKeyRetrieval=true
 spring.datasource.username=root
-spring.datasource.password=root
+spring.datasource.password=ljtLJT715336
 spring.datasource.type=com.alibaba.druid.pool.DruidDataSource
 spring.datasource.druid.initial-size=1
 spring.datasource.druid.min-idle=1
@@ -26,4 +26,5 @@ mybatis.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
 logging.level.root=info
 
 # ≈‰÷√port
-server.port=80
+server.port=9090
+
