修复由于springboot自带的json转换器导致时间错误的bug

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,7 +17,7 @@ spring.datasource.druid.test-on-return=false
 spring.datasource.druid.pool-prepared-statements=true
 spring.datasource.druid.max-open-prepared-statements=20
 spring.datasource.druid.validation-query=SELECT 1
-
+spring.jackson.time-zone=GMT+8
 # mybatis≈‰÷√
 mybatis.configuration.log-impl=org.apache.ibatis.logging.stdout.StdOutImpl
 #mybatis.config-location=classpath:mybatis-config.xml
